--- a/public/400.html
+++ b/public/400.html
@@ -20,7 +20,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <h1>You made a bad request</h1>
-    <p>Go in the corner and think about what you did.</p>
+    <p>Go in the corner and think about what you did one more time.</p>
   </div>
 </body>
 </html>
